Make command manager thread safe